[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "testpath"
author = "Jupyter Development Team"
author-email = "jupyter@googlegroups.com"
home-page = "https://github.com/jupyter/testpath"
description-file = "README.rst"
dev-requires = ["pathlib2; python_version == \"2.7\""]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[tool.flit.metadata.urls]
Documentation = "https://testpath.readthedocs.io/en/latest/"
