[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "testpath"
author = "Jupyter Development Team"
author-email = "jupyter@googlegroups.com"
home-page = "https://github.com/jupyter/testpath"
description-file = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[tool.flit.metadata.requires-extra]
test = ["pathlib2; python_version == \"2.7\""]

[tool.flit.metadata.urls]
Documentation = "https://testpath.readthedocs.io/en/latest/"
