[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "testpath"
authors = [
    {name="Jupyter Development Team", email="jupyter@googlegroups.com"},
]
readme = "README.rst"
requires-python = ">= 3.5"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://testpath.readthedocs.io/en/latest/"
Source = "https://github.com/jupyter/testpath"
